# plant-imager

./: .gitignore  .gitmodules  404.html  LICENSE  MANIFEST.in  README.md  README.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docker.yml
conda/: lpy.yaml
conda_recipe/: environment.yaml  meta.yaml
config/: hardware_scan.toml  hardware_scan_rx0.toml  hardware_scan_v3.toml  vscan_lpy.toml  vscan_lpy_blender.toml  vscan_obj.toml
configs/: hardware_scan.toml  scan.toml  vscan_lpy_blender.toml
database_example/vscan_data/: files.json
developer/: index.html
developer/documentation/: index.html
developer/virtualplantimager/: index.html
doc/source/: conf.py  index.rst  modules.rst  romiscanner.rst  romiscanner_configs.rst  romiscanner_tasks.rst
docker/: Dockerfile  build.sh  index.html  romiscanner.yaml  run.sh
docker/plantimager/: Dockerfile  build.sh  run.sh
docker/virtualplantimager/: Dockerfile  build.sh  index.html  run.sh
docs/: index.md  rest_api.md
docs/developer/: documentation.md  index.md  virtualplantimager.md
docs/docker/: index.md
examples/: boustro.py  camtest.py  camtest.py~  centered_scan.py  compute_path.py  rail.py  realsense.py  reboot_motors.py  run_path.py  test-scan.py
examples/test/: uv-000.npy  vertFP-000.npy
lettucethink/: #sony.py#  .#sony.py  __init__.py  blgimbal.py  cam_ds.py  cnccontroller.py  cv.py  cvcam.py  db.py  ds.py  dummy.py  dynamixel.py  error.py  fsdb.py  gp2.py  grbl.py  hal.py  jslinux.py  log.py  logging.py  mc.py  nav.py  omeclidb.py  path.py  planning.py  pololu.py  position.py  rail.py  rail.py~  realsense.py  robot.py  rover.py  scan.py  setup.py  sony.py  sony_remote.py  svg.py  urlcam.py  utils.py  version.py  (+2 more)
lettucethink.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lettucethink/db/: db_api.py  fsdb.py  ome_cli_db.py  omeclidb.py
lettucethink/hardware/: #camera.py#  .#camera.py  XL430_gimbal.py  XL430_gimbal.py~  camera.py  cartesian_arm.py  ds_camera.py  gp2_camera.py  grbl_cnc.py  pantilt_unit.py  rotation_unit.py  rotation_unit.py~
lettucethink/motion_planning/: scanpath.py
lettucethink/util/: imagelogger.py  svgdocument.py  workspace.py
lpy/: arabidopsis.lpy
plantimager/: blgimbal.py  dummy.py  dynamixel.py  error.py  gp2.py  grbl.py  hal.py  log.py  lpy.py  oquamCNC.py  oquamGimbal.py  path.py  picam.py  picam1.py  picam2.py  scanner.py  sony.py  units.py  urlcam.py  utils.py  vscan.py
plantimager/tasks/: lpy.py  scan.py
preview/: preview.py
rest_api/: index.html
romiscanner/: blgimbal.py  dummy.py  dynamixel.py  error.py  gp2.py  grbl.py  hal.py  log.py  lpy.py  path.py  scan.py  scanner.py  sony.py  units.py  urlcam.py  vscan.py
search/: search_index.json
test/: test_camera_cv.py  test_camera_gp2.py  test_camera_sony.py  test_cnc_ctrl.py  test_cnc_grbl.py  test_fsdb.py  test_gimbal_brushless.py  test_gimbal_dynamixel.py  test_rail.py  test_rail.py~  test_rx0_flashair.py  test_rx0_flashair.py~  test_scan_1.py  test_scan_2.py  test_scan_3.py  test_scan_lyon.py
(+61 files in other folders)
