[tool.poetry]
name = "plantimager"
version = "0.10.99"
description = "ROMI Plant Imager"
authors = ["Nabil AIT TALEB <aittalebnabil@gmail.com>"]
license = "LGPL_v3"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
colorlog = "^6.6.0"
#numpy = "^1.22.3"
numpy = "^1.20.3"
imageio = "^2.18.0"
psutil = "^5.9.0"
requests = "^2.27.1"
pyserial = "^3.5"
romitask = {path = "romitask"}
plantdb = {path = "plantdb"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_dataset = "plantimager.bin.generate_dataset:run"
romi_bpy = "plantimager.bin.romi_bpy:run"
romi_clean_mesh = "plantimager.bin.romi_clean_mesh:run"
romi_split_by_material = "plantimager.bin.romi_split_by_material:run"
romi_virtualplantimager = "plantimager.bin.romi_virtualplantimager:run"
